--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
   flutter_screenutil: ^5.9.3
+  flutter_rating_bar: ^4.0.1
+
 
 
 dev_dependencies:
